--- a/views/sell3.html
+++ b/views/sell3.html
@@ -74,7 +74,7 @@
     <h1>Thank You</h1>
     <p>Your request will be processed immediately<span class="loading-dots"></span></p>
     <img src="../resource/images/Icon_Gambar/Order_Sell/sell_success.png" alt="Thank You Image">
-    <a href="../views/index.php" class="btn"><b>Return to Home Page</b></a>
+    <a href="../index.html" class="btn"><b>Return to Home Page</b></a>
     </section>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
